# URC_ARM

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  frames_2026-01-25_20.25.24.gv  optimized_ik.py  start_dev.sh
URC_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
URC_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.3
URC_ws/log/: latest_build
URC_ws/src/arm_moveit_config/config/: ros2_controllers.yaml
URC_ws/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
URC_ws/src/log/: latest_build
URC_ws/src/moveit_demo/: CMakeLists.txt
URC_ws/src/moveit_demo/config/: initial_positions.yaml  ompl_planning.yaml  rarm_5.srdf  rarm_5.urdf.xacro  ros2_controllers.yaml
URC_ws/src/moveit_demo/launch/: demo.launch.py  move_group.launch.py  warehouse_db.launch.py
URC_ws/src/urc_arm_description/: CMakeLists.txt
URC_ws/src/urc_arm_description/config/: kinematics.yaml
URC_ws/src/urc_arm_description/meshes/: link_2.STL  link_3.STL  link_4.STL
URC_ws/src/urc_arm_description/urdf/: rarm_5.urdf.xacro  temp_arm.urdf
orangewood_ws/devel/: .catkin  .rosinstall
orangewood_ws/devel/lib/gazebo_state_plugins/: gazebo_request_object_info
orangewood_ws/devel/lib/gazebo_test_tools/: cube_spawner  fake_object_recognizer_cmd  (+2 more)
src/complete_description/: CMakeLists.txt  README.md  package.xml
src/complete_description/config/: ros2_controllers.yaml
src/complete_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  gazebo_bringup.launch.py  view.launch.py
src/complete_description/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl  link_5_1.stl  link_6_1.stl
src/complete_description/urdf/: Complete.gazebo  Complete.trans  Complete.xacro  materials.xacro
src/complete_description/worlds/: pick_place_demo.sdf
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  rarm_5.ros2_control.xacro  rarm_5.srdf  rarm_5.urdf.xacro  ros2_controllers.yaml
src/my_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/urc_arm_description/: CMakeLists.txt  package.xml
src/urc_arm_description/config/: ros2_controllers.yaml  urc_arm.srdf
src/urc_arm_description/launch/: gazebo_keyboard.launch.py  view_arm.launch.py
src/urc_arm_description/meshes/: link_5.STL
src/urc_arm_description/src/: keyboard_arm_teleop.py  keyboard_cartesian_teleop.py
src/urc_arm_description/urdf/: rarm_5.urdf.xacro  robot_for_setup.urdf  urc_arm.xacro
src/urc_demo_hardcoded/: README.md  package.xml  setup.cfg  setup.py
src/urc_demo_hardcoded/config/: arm_wave_motion.yaml  hardcoded_pick_place.yaml
src/urc_demo_hardcoded/launch/: arm_motion_gazebo_demo.launch.py  complete_gazebo_demo.launch.py  hardcoded_pick_place.launch.py
src/urc_demo_hardcoded/urc_demo_hardcoded/: arm_wave_motion.py  hardcoded_pick_place.py
(+83 files in other folders)
